--- a/calendar/templates/month_navigation.mustache
+++ b/calendar/templates/month_navigation.mustache
@@ -46,7 +46,9 @@
             <span class="arrow_text">{{previousperiodname}}</span>
         </a>
         <span class="hide"> | </span>
-        <h2 class="current">{{periodname}}</h2>
+        <span>
+            <a class="current" href="{{{url}}}" title="{{#str}}monththis, calendar{{/str}}">{{periodname}}</a>
+        </span>
         <span class="hide"> | </span>
         <a{{!
             }} href="{{nextperiodlink}}"{{!
